docs/0.6/_sources/api/gammapy.irf.EnergyDependentMultiGaussPSF.rst.txt


EnergyDependentMultiGaussPSF
========================================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDependentMultiGaussPSF
   :show-inheritance:

   
     
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EnergyDependentMultiGaussPSF.containment_radius
      ~EnergyDependentMultiGaussPSF.from_fits
      ~EnergyDependentMultiGaussPSF.info
      ~EnergyDependentMultiGaussPSF.peek
      ~EnergyDependentMultiGaussPSF.plot_containment
      ~EnergyDependentMultiGaussPSF.plot_containment_vs_energy
      ~EnergyDependentMultiGaussPSF.psf_at_energy_and_theta
      ~EnergyDependentMultiGaussPSF.read
      ~EnergyDependentMultiGaussPSF.to_energy_dependent_table_psf
      ~EnergyDependentMultiGaussPSF.to_fits
      ~EnergyDependentMultiGaussPSF.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: containment_radius
   .. automethod:: from_fits
   .. automethod:: info
   .. automethod:: peek
   .. automethod:: plot_containment
   .. automethod:: plot_containment_vs_energy
   .. automethod:: psf_at_energy_and_theta
   .. automethod:: read
   .. automethod:: to_energy_dependent_table_psf
   .. automethod:: to_fits
   .. automethod:: write

   
   