docs/0.18.1/_sources/api/gammapy.irf.EnergyDependentMultiGaussPSF.rst.txt
EnergyDependentMultiGaussPSF
============================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDependentMultiGaussPSF
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EnergyDependentMultiGaussPSF.energy_axis_true
      ~EnergyDependentMultiGaussPSF.offset_axis
      ~EnergyDependentMultiGaussPSF.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~EnergyDependentMultiGaussPSF.containment_radius
      ~EnergyDependentMultiGaussPSF.from_table_hdu
      ~EnergyDependentMultiGaussPSF.info
      ~EnergyDependentMultiGaussPSF.peek
      ~EnergyDependentMultiGaussPSF.plot_containment
      ~EnergyDependentMultiGaussPSF.plot_containment_vs_energy
      ~EnergyDependentMultiGaussPSF.psf_at_energy_and_theta
      ~EnergyDependentMultiGaussPSF.read
      ~EnergyDependentMultiGaussPSF.to_energy_dependent_table_psf
      ~EnergyDependentMultiGaussPSF.to_hdulist
      ~EnergyDependentMultiGaussPSF.to_psf3d
      ~EnergyDependentMultiGaussPSF.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_axis_true
   .. autoattribute:: offset_axis
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: containment_radius
   .. automethod:: from_table_hdu
   .. automethod:: info
   .. automethod:: peek
   .. automethod:: plot_containment
   .. automethod:: plot_containment_vs_energy
   .. automethod:: psf_at_energy_and_theta
   .. automethod:: read
   .. automethod:: to_energy_dependent_table_psf
   .. automethod:: to_hdulist
   .. automethod:: to_psf3d
   .. automethod:: write
